Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

15-Nov-2010 Mark Dexter
# Sample data fixes (thanks Elin Waring)
# [#23184] Need to handle content, modules, menu items when a viewing permission level is deleted

15-Nov-2010 Andrew Eddie
 # Fixed issue [#23247] behavior.keepalive with long session lifetime is causing firefox to freeze/crash (Markus Bopp, Ian MacLennan).
 # Fixed issue [#23007] locked categories still available (Adrian Louter, Elin Waring).
 # Fixed issue [#23069] Theoretical com_config exploit (Matt Thomas).

15-Nov-2010 Jean-Marie Simonet
 $ Adding missing string
 # [#23318] Remove hardcoded style so that RTL will work. Thanks Andrea.
 $ Moving and consolidated some strings
 
14-Nov-2010 Mark Dexter
# [#21571] category blog view drill down does not maintain layout style

14-Nov-2010 Jean-Marie Simonet
 # [#23217] Move rules strings to library language file and rename keys for consistency. Consolidated some strings.
 # [#21264] RTL issues with media manager. Thanks Andrea.
 
14-Nov-2010 Christophe Demko
 # [#23167] Remove align and valign attributes from the site (Rouven Weßling)
 # [#23126] Missing images in hathor template (Andrea Tarr)
 $ Fix a language key in com_newsfeeds

13-Nov-2010 Jean-Marie Simonet
 # [#23292] Unicode slugs lets Upper case in url, which can cause issues when SEF is on
 # [#23299] calendar css don't display week-end days
 $ [#23199] Database Error: JLIB_DATABASE_ERROR_CONNECT_DATABASE
 # [#23284] Make tabs accessible for keyboard/screen readers. Thanks Andrea.
 # [#23294] Allow archiving of category when parent category is published. Thanks Mark.
 # [#23285] Incorrect markup in com_media. Thanks Rouven.
 # [#23277] JToolbarHelper has wrong variable in generated URL. Thanks Michael and Bill.

12-Nov-2010 Jean-Marie Simonet
$ Deleted some redundant ini string
