@@ -16,5 +16,6 @@ MOD_QUICKICON_MEDIA_MANAGER="Media Manager"
 MOD_QUICKICON_MENU_MANAGER="Menu Manager"
 MOD_QUICKICON_MODULE_MANAGER="Module Manager"
 MOD_QUICKICON_PROFILE="Edit profile"
+MOD_QUICKICON_TEMPLATE_MANAGER="Template Manager"
 MOD_QUICKICON_USER_MANAGER="User Manager"
 MOD_QUICKICON_XML_DESCRIPTION="This module shows Quick Icons that are visible on the Control Panel (admin area home page)"
